// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "async.async.js?ver=332db2bcb6b6f299224f",
    265,
    Object {
      "fullhash": "332db2bcb6b6f299224f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "main.js.gz",
    3959,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3959,
    },
  ],
  Array [
    "main.js?var=332db2bcb6b6f299224f",
    16654,
    Object {
      "fullhash": "332db2bcb6b6f299224f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16654,
    },
  ],
]
`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `Array []`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "async.async.js?ver=332db2bcb6b6f299224f",
    265,
    Object {
      "fullhash": "332db2bcb6b6f299224f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "main.js.gz",
    3959,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3959,
    },
  ],
  Array [
    "main.js?var=332db2bcb6b6f299224f",
    16654,
    Object {
      "fullhash": "332db2bcb6b6f299224f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16654,
    },
  ],
]
`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
